@@ -1,3 +1,13 @@
+2006-02-16  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
+
+	PR libfortran/24903
+	* m4/dotprodc.m4: Use __builtin_conj instead of assigning real
+	and imaginary parts separately.
+	* generated/dotprod_c4.c: Regenerated.
+	* generated/dotprod_c8.c: Regenerated.
+	* generated/dotprod_c10.c: Regenerated.
+	* generated/dotprod_c16.c: Regenerated.
+
 2006-02-12  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	PR libgfortran/25949
